--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -102,24 +102,15 @@
           </oj-navigation-list>
         </div>
       </header>
-      <oj-module role="main" class="oj-web-applayout-max-width oj-web-applayout-content" config="[[moduleAdapter.koObservableConfig]]">
+      <oj-module
+        role="main"
+        class="oj-web-applayout-max-width oj-web-applayout-content"
+        config="[[ModuleElementUtils.createConfig({name: userLogin() === '' ? 'login' : 'dashboard'})]]"
+      >
       </oj-module>
       <footer class="oj-web-applayout-footer" role="contentinfo">
-        <div class="oj-web-applayout-footer-item oj-web-applayout-max-width">
-          <ul>
-            <oj-bind-for-each data="[[footerLinks]]">
-              <template>
-                <li>
-                  <a :id="[[$current.data.linkId]]" :href="[[$current.data.linkTarget]]">
-                    <oj-bind-text value="[[$current.data.name]]"></oj-bind-text>
-                  </a>
-                </li>
-              </template>
-            </oj-bind-for-each>
-          </ul>
-        </div>
         <div class="oj-web-applayout-footer-item oj-web-applayout-max-width oj-text-color-secondary oj-typography-body-sm">
-          Copyright © 2014, 2023 Oracle and/or its affiliates All rights reserved.
+          Copyright © 2024 Dmytro Bilokha.
         </div>
       </footer>
     </div>
