--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,33 +1,7 @@
 <!DOCTYPE html>
-<!--
- Copyright (c) 2014, 2023, Oracle and/or its affiliates.
- Licensed under The Universal Permissive License (UPL), Version 1.0
- as shown at https://oss.oracle.com/licenses/upl/
- -->
-
-<!-- ************************ IMPORTANT INFORMATION ************************************
-  This web navigation bar template is provided as an example of how to configure
-  a JET web application with a navigation bar as a single page application
-  using ojRouter and oj-module.  It contains the Oracle JET framework and a default
-  requireJS configuration file to show how JET can be setup in a common application.
-  This project template can be used in conjunction with demo code from the JET
-  website to test JET component behavior and interactions.
-
-  Any CSS styling with the prefix "demo-" is for demonstration only and is not
-  provided as part of the JET framework.
-
-  Please see the demos under Cookbook/Patterns/App Shell: Web and the CSS documentation
-  under Support/API Docs/Non-Component Styling on the JET website for more information on how to use
-  the best practice patterns shown in this template.
-
-  Aria Landmark role attributes are added to the different sections of the application
-  for accessibility compliance. If you change the type of content for a specific
-  section from what is defined, you should also change the role value for that
-  section to represent the appropriate content type.
-  ***************************** IMPORTANT INFORMATION ************************************ -->
 <html lang="en-us">
   <head>
-    <title>Oracle JET Starter Template - Web Nav Bar</title>
+    <title>Tyde</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1">
@@ -50,64 +24,39 @@
 
   </head>
   <body class="oj-web-applayout-body">
-    <!-- Template for rendering navigation items -->
-    <script type="text/html" id="navTemplate">
-      <li><a href="#">
-        <span :class="[['oj-navigationlist-item-icon ' + $data.detail.iconClass]]"></span>
-        <oj-bind-text value="[[$data.detail.label]]"></oj-bind-text>
-      </a></li>
-    </script>
-
     <div id="globalBody" class="oj-web-applayout-page">
-
       <div id="announce" tabindex="-1" class="sendOffScreen" :aria-live="[[manner]]" aria-atomic="true">
           <p id="ariaLiveMessage"><oj-bind-text value="[[message]]"></oj-bind-text></p>
       </div>
-
-      <!--
-         ** Oracle JET V15.1.0 web application navigation bar and header patterns.
-         ** Please see the demos under Cookbook/Patterns/App Shell: Web
-         ** and the CSS documentation under Support/API Docs/Non-Component Styling
-         ** on the JET website for more information on how to use this pattern.
-      -->
       <header role="banner" class="oj-web-applayout-header">
         <div class="oj-web-applayout-max-width oj-flex-bar oj-sm-align-items-center">
           <div class="oj-flex-bar-middle oj-sm-align-items-baseline">
-            <span role="img" class="oj-icon demo-oracle-icon" title="Oracle Logo" alt="Oracle Logo"></span>
-            <h1 class="oj-sm-only-hide oj-web-applayout-header-title" title="Application Name"><oj-bind-text value="[[appName]]"></oj-bind-text></h1>
+            <h1 class="oj-sm-only-hide oj-web-applayout-header-title" title="Application Name">Tyde</h1>
           </div>
           <div class="oj-flex-bar-end">
-            <!-- Responsive Toolbar -->
-            <oj-toolbar>
-              <oj-menu-button id="userMenu" display="[[smScreen() ? 'icons' : 'all']]" chroming="borderless">
-                <span><oj-bind-text value="[[userLogin]]"></oj-bind-text></span>
-                <span slot="endIcon" :class="[[{'oj-icon demo-appheader-avatar': smScreen(), 'oj-component-icon oj-button-menu-dropdown-icon': !smScreen()}]]"></span>
-                <oj-menu id="menu1" slot="menu">
-                  <oj-option id="pref" value="pref">Preferences</oj-option>
-                  <oj-option id="help" value="help">Help</oj-option>
-                  <oj-option id="about" value="about">About</oj-option>
-                  <oj-option id="out" value="out">Sign Out</oj-option>
-                </oj-menu>
-              </oj-menu-button>
-            </oj-toolbar>
+            <oj-bind-if test="[[userLogin() !== '']]">
+              <oj-toolbar>
+                <oj-menu-button id="userMenu" display="all" chroming="borderless">
+                  <span>
+                    <oj-bind-text value="[[userLogin]]"></oj-bind-text>
+                  </span>
+                  <span slot="endIcon" class="oj-component-icon oj-button-menu-dropdown-icon"></span>
+                  <oj-menu id="menu1" slot="menu" on-oj-menu-action="[[userMenuAction]]">
+                    <oj-option id="reload-notebook" value="reload">Reload Notebook</oj-option>
+                    <oj-option id="out" value="logout">Sign Out</oj-option>
+                  </oj-menu>
+                </oj-menu-button>
+              </oj-toolbar>
+            </oj-bind-if>
           </div>
         </div>
-        <div role="navigation" class="oj-web-applayout-max-width oj-web-applayout-navbar">
-          <oj-navigation-list id="navList" data="[[navDataProvider]]"
-                              :class="[[{'oj-md-condense oj-md-justify-content-flex-end': !smScreen()}]]"
-                              display="[[smScreen() ? 'icons' : 'all']]"
-                              edge="top"
-                              item.renderer="[[KnockoutTemplateUtils.getRenderer('navTemplate', true)]]"
-                              selection="{{selection.path}}">
-          </oj-navigation-list>
-        </div>
       </header>
-      <oj-module
-        role="main"
-        class="oj-web-applayout-max-width oj-web-applayout-content"
-        config="[[ModuleElementUtils.createConfig({name: userLogin() === '' ? 'login' : 'dashboard'})]]"
-      >
-      </oj-module>
+      <div role="main" class="oj-web-applayout-max-width oj-web-applayout-content">
+        <oj-c-message-toast type="section" position="top" data="[[messagesProvider]]" on-oj-close="[[closeMessage]]"></oj-c-message-toast>
+        <div id="div1">
+          <oj-module config="[[ModuleElementUtils.createConfig({name: userLogin() === '' ? 'login' : 'dashboard'})]]"></oj-module>
+        </div>
+      </div>
       <footer class="oj-web-applayout-footer" role="contentinfo">
         <div class="oj-web-applayout-footer-item oj-web-applayout-max-width oj-text-color-secondary oj-typography-body-sm">
           Copyright © 2024 Dmytro Bilokha.
