Clean up frontend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1">
-    <link rel="icon" href="css/images/JET-Favicon-Red-32x32.png" type="image/x-icon" />
+    <link rel="icon" href="css/images/favicon-32x32.png" type="image/x-icon" />
 
     <!-- This is the main css file for the default theme -->
 		<!-- injector:theme -->
@@ -31,6 +31,7 @@
       <header role="banner" class="oj-web-applayout-header">
         <div class="oj-web-applayout-max-width oj-flex-bar oj-sm-align-items-center">
           <div class="oj-flex-bar-middle oj-sm-align-items-baseline">
+            <img src="css/images/favicon-32x32.png" alt="Tyde logo" width="24" height="24">
             <h1 class="oj-sm-only-hide oj-web-applayout-header-title" title="Application Name">Tyde</h1>
           </div>
           <div class="oj-flex-bar-end">
