--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,10 +17,7 @@
     <!-- This is where you would add any app specific styling -->
     <link rel="stylesheet" href="css/app.css" type="text/css"/>
 
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
-
+    <link rel="stylesheet" href="css/leaflet-1.9.4.css" type="text/css"/>
 
   </head>
   <body class="oj-web-applayout-body">
